[project]
name = "dabshell"
version = "0.0.4"

description = "Simple shell working portable on windows and linux"
authors = [
    {name="Damian Brunold", email="dab@dabsoft.ch"}
]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
dsh = "dabshell:dabshell"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
